[package]
name = "ferris-scan"
version = "0.25.0"
edition = "2021"
authors = ["vnilabean"]
description = "A blazingly fast disk usage analyzer written in Rust"
license = "MIT"

# ============================================================================
# CORE + MULTI-FRONTEND ARCHITECTURE
# ============================================================================
# - lib.rs: Core business logic (Scanner, FileTree, ScanState)
# - bin/tui.rs: Terminal User Interface (ratatui)
# - bin/gui.rs: Graphical User Interface (eframe/egui)
# ============================================================================

[lib]
name = "ferris_scan"
path = "src/lib.rs"

[[bin]]
name = "ferris-scan-tui"
path = "src/bin/tui.rs"
required-features = []

[[bin]]
name = "ferris-scan-gui"
path = "src/bin/gui.rs"
required-features = []

# ============================================================================
# FEATURE FLAGS: "Open Source Code, Paid Binaries" Business Model
# ============================================================================
# - Default build (free): Core scanning functionality only
# - Pro build: Includes data export (CSV) and advanced features
#
# To build Pro version:
#   cargo build --release --features pro --bin ferris-scan-tui
#   cargo build --release --features pro --bin ferris-scan-gui
# ============================================================================

[features]
default = []
pro = ["dep:serde", "dep:csv"]

[dependencies]
# Filesystem traversal (high-performance parallel scanning)
jwalk = "0.8.1"

# Parallel processing
rayon = "1.11.0"

# Error handling
anyhow = "1.0.102"

# Pro-only dependencies (gated behind 'pro' feature)
serde = { version = "1.0.228", features = ["derive"], optional = true }
csv = { version = "1.4.0", optional = true }

# ============================================================================
# FRONTEND DEPENDENCIES
# ============================================================================
# Terminal UI dependencies (used by bin/tui.rs)
ratatui = "0.30.0"
crossterm = "0.29.0"

# GUI dependencies (used by bin/gui.rs)
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui-phosphor = "0.11.0"
mft = "0.7.0"
rfd = "0.17.2"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
